# legendary-waffle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  match-terms.txt
src/: New Text Document.txt  OCR.cpp  OCR.h  ResourceMatcher.cpp  ResourceMatcher.h  RuleMatcher.cpp  RuleMatcher.h  Source.cpp  TSQueue.hpp  Utils.cpp  Utils.h  Utils.hpp
